commit lần đẩu đổi be mới và đổi fe web mới

--- a/ChatWeb/chat-app/src/app/pages/chatting/chatting.component.css
+++ b/ChatWeb/chat-app/src/app/pages/chatting/chatting.component.css
@@ -91,6 +91,201 @@ emoji-mart {
   }
   
 }
+/* .sidebar .left-section {
+  height:65px;
+  justify-content: start;
+  &.active{
+      background-color: #dee2e6;
+      border-bottom: solid 1px #E0E0E0;
+  }
+} */
+ .sidebar{
+  max-height: 100vh; /* adjust based on your layout */
+  overflow-y: auto;
+ }
+.sidebar .left-section.friends{
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  margin: 0px;
+  flex-direction: row;
+  background-color: #fff;
+  width:100%;
+}
+.sidebar .left-section{
+  margin-top: 20px;
+  max-height: 80vh; /* adjust based on your layout */
+  overflow-y: auto;
+}
+.sidebar .btn-primary{
+	background-color: #4088c2;
+	border: 1px solid #4088c2;
+	border-radius: 5px;
+  margin-bottom: 15px;
+  span{
+    font-size: 13px;
+    gap:5px;
+  }
+}
+.members-searchbar{
+  border: 2px solid #3897e5;
+  border-radius: 35px;
+  margin-bottom: 15px;
+  outline: none;
+  padding: 6px 15px;
+  background-color: transparent;
+  font-size: 16px;
+  color: #333;
+  width: 80%;
+}
+.senderOnMsg{
+  font-size: 11px;
+  margin-bottom: 2px;
+  color: #888;
+}
+.divider-text {
+  position: relative;
+  display: block;
+  text-align: center;
+  border: none;
+  border-top: 1px solid #ccc;
+  margin: 20px 0;
+  height: 1px;
+}
+
+.divider-text::before {
+  content: attr(data-content);
+  position: absolute;
+  top: -0.8em;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: white; /* Adjust to match your background */
+  padding: 0 8px;
+  color: #666;
+  font-size: 0.85rem;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: -300px; /* Start off screen */
+  width: 300px;
+  height: 100vh;
+  background-color: #ffffff;
+  color: #555;
+  padding: 1rem;
+  box-shadow: -2px 0 5px rgba(0,0,0,0.2);
+  transition: right 0.3s ease;
+  z-index: 1000;
+}
+
+.sidebar.open {
+  right: 0; /* Slide in */
+}
+
+.profile {
+  margin: 20px 0;
+}
+
+/* Profile sidebar */
+.profile-sidebar {
+  padding: 20px 0 10px 0;
+  background: #fff;
+}
+
+.profile-userpic img {
+  float: none;
+  margin: 0 auto;
+  width: 50%;
+  height: 50%;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  border-radius: 50% !important;
+}
+
+.profile-usertitle {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.profile-usertitle-name {
+  color: #5a7391;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 7px;
+}
+
+.profile-usertitle-job {
+  text-transform: uppercase;
+  color: #5b9bd1;
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.profile-userbuttons {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.profile-userbuttons .btn {
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  padding: 6px 15px;
+  margin-right: 5px;
+}
+
+.profile-userbuttons .btn:last-child {
+  margin-right: 0px;
+}
+    
+.profile-usermenu {
+  margin-top: 30px;
+}
+
+.profile-usermenu ul li {
+  border-bottom: 1px solid #f0f4f7;
+}
+
+.profile-usermenu ul li:last-child {
+  border-bottom: none;
+}
+
+.profile-usermenu ul li a {
+  color: #93a3b5;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.profile-usermenu ul li a i {
+  margin-right: 8px;
+  font-size: 14px;
+}
+
+.profile-usermenu ul li a:hover {
+  background-color: #fafcfd;
+  color: #5b9bd1;
+}
+
+.profile-usermenu ul li.active {
+  border-bottom: none;
+}
+
+.profile-usermenu ul li.active a {
+  color: #5b9bd1;
+  background-color: #f6f9fb;
+  border-left: 2px solid #5b9bd1;
+  margin-left: -2px;
+}
+
+/* Profile Content */
+.profile-content {
+  padding: 20px;
+  background: #fff;
+  min-height: 460px;
+}
+
 .header-chat .photo {
   margin-left:20px;
   display: block;
