--- a/ChatWeb/chat-app/src/app/pages/chatting/chatting.component.css
+++ b/ChatWeb/chat-app/src/app/pages/chatting/chatting.component.css
@@ -733,3 +733,46 @@ border: 3px solid #FAFAFA;
   font-size: 12px;
   max-width:20px;
 }
+
+
+.group-avatar {
+  position: relative;
+  display: inline-block;
+}
+
+.image-edit-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.edit-image-btn {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-sm {
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
