--- a/ChatWeb/chat-app/src/app/pages/auth/auth.component.html
+++ b/ChatWeb/chat-app/src/app/pages/auth/auth.component.html
@@ -49,7 +49,7 @@
                 </div>
               </div>
               <div class="button input-box">
-                <input type="button" value="Sumbit" (click)="onLogin()">
+                <input type="button" value="Sumbit" (click)="onLogin()" (keydown.enter)="onLogin()">
               </div>
               <div class="text sign-up-text">Don't have an account? <label for="flip">Sigup now</label></div>
             </div>
@@ -92,7 +92,7 @@
                 </div>
               </div>
               <div class="button input-box">
-                <input type="button" value="Sumbit" (click)="onRegister()">
+                <input type="button" value="Sumbit" (click)="onRegister()" (keydown.enter)="onRegister()">
               </div>
               <div class="text sign-up-text">Already have an account? <label for="flip">Login now</label></div>
             </div>
