--- a/ChatWeb/chat-app/src/styles.css
+++ b/ChatWeb/chat-app/src/styles.css
@@ -7,7 +7,7 @@
 }
 
 .Left-section,.Right-section{
-  height:86vh;
+  height: calc(100vh - 80px);
 }
   /* === CONVERSATIONS === */
   
@@ -153,7 +153,7 @@
 
 .desc-contact {
   height: 43px;
-  width:50%;
+  width:45%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -213,7 +213,7 @@
     margin-top: 2px;
   }
 
-  .parent .alert {
+  .parent .alert , .modal-profile.alert{
     width: 30%;
     text-align: center;
     padding: 15px;
@@ -223,6 +223,7 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
+    z-index: 100;
     
     &.success,
     &.fail {
